--- a/player-stats.html.template
+++ b/player-stats.html.template
@@ -1,5 +1,10 @@
+<!DOCTYPE html>
+
 <html>
     <head>
+        <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+        <meta name="viewport" content="width=device-width">
+        <title>$player_name - calsquash-rankings</title>
         <link rel="stylesheet" href="https://ankurdave.com/calsquash-rankings-style.css">
         <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
         <script type="text/javascript">
