--- a/lambda_functions/player-stats.html.template
+++ b/lambda_functions/player-stats.html.template
@@ -21,7 +21,8 @@
 
              var options = {'chartArea': { 'top': 10, 'right': 20, 'bottom': 40, 'left': 40},
                             'intervals': { 'style': 'area' },
-                            'legend': 'none'};
+                            'legend': 'none',
+                            'vAxis': { 'viewWindow': { 'max': 50 }}};
 
              var chart = new google.visualization.LineChart(
                  document.getElementById('rating_history'));
