--- a/lambda_functions/rankings.html.template
+++ b/lambda_functions/rankings.html.template
@@ -10,6 +10,7 @@
     <body>
         <div id="container">
             <p class="breadcrumb"><a href="https://github.com/ankurdave/calsquash-rankings" class="project">calsquash-rankings</a> / <span class="file">$filename</span></p>
+            <p>$description</p>
             <p>Generated $now.</p>
 
             $html_table
